// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Responsibles /> should not render the lattes information when hideLattesInfo is passed 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  background: hsla(0,0%,100%);
  margin-top: 3rem;
  background: transparent;
}

.c0 section {
  padding: 0.8rem;
  width: 100%;
  height: 100%;
  background: transparent;
  overflow-x: auto;
  overflow-y: hidden;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  color: hsla(204,7%,15%);
}

.c1 th,
.c1 td {
  padding: 0.8rem 0.5rem;
  border-bottom: 0.1rem solid hsl(0,0%,74%);
}

.c1 th:not(:first-child),
.c1 td:not(:first-child) {
  text-align: center;
}

.c1 thead th {
  font-weight: 500;
  border-bottom: 0.2rem solid hsl(0,0%,74%);
}

.c1 tbody tr:nth-child(odd) {
  background-color: hsl(0,0%,93%);
}

@media (max-width:1170px) {
  .c0 {
    max-width: 80rem;
  }
}

@media (max-width:768px) {
  .c0 {
    max-width: 65rem;
    margin: auto;
  }
}

<div>
  <div
    class="c0"
  >
    <section>
      <table
        class="c1"
      >
        <thead>
          <tr>
            <th>
              Nome
            </th>
            <th>
              E-mail
            </th>
            <th>
              Telefone
            </th>
            <th>
              Cadastrado
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td />
            <td>
              my-email-is-test@test.com
            </td>
            <td />
            <td>
              <svg
                color="hsla(29, 73%, 56%)"
                fill="currentColor"
                height="3rem"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(61, 61, 61);"
                viewBox="0 0 1024 1024"
                width="3rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 688a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
                />
              </svg>
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;

exports[`<Responsibles /> should render without crashing 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  background: hsla(0,0%,100%);
  margin-top: 3rem;
  background: transparent;
}

.c0 section {
  padding: 0.8rem;
  width: 100%;
  height: 100%;
  background: transparent;
  overflow-x: auto;
  overflow-y: hidden;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  color: hsla(204,7%,15%);
}

.c1 th,
.c1 td {
  padding: 0.8rem 0.5rem;
  border-bottom: 0.1rem solid hsl(0,0%,74%);
}

.c1 th:not(:first-child),
.c1 td:not(:first-child) {
  text-align: center;
}

.c1 thead th {
  font-weight: 500;
  border-bottom: 0.2rem solid hsl(0,0%,74%);
}

.c1 tbody tr:nth-child(odd) {
  background-color: hsl(0,0%,93%);
}

@media (max-width:1170px) {
  .c0 {
    max-width: 80rem;
  }
}

@media (max-width:768px) {
  .c0 {
    max-width: 65rem;
    margin: auto;
  }
}

<div>
  <div
    class="c0"
  >
    <section>
      <table
        class="c1"
      >
        <thead>
          <tr>
            <th>
              Nome
            </th>
            <th>
              E-mail
            </th>
            <th>
              Telefone
            </th>
            <th>
              ID Lattes
            </th>
            <th>
              Cadastrado
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </section>
  </div>
</div>
`;

exports[`<Responsibles /> should render without crashing when the responsible are being passed throught 1`] = `
.c2 {
  color: hsla(0,0%,7%);
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  font-weight: 700;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2:focus {
  box-shadow: 0px 0px 4px 2px hsla(29,94%,62%);
}

.c0 {
  width: 100%;
  height: 100%;
  background: hsla(0,0%,100%);
  margin-top: 3rem;
  background: transparent;
}

.c0 section {
  padding: 0.8rem;
  width: 100%;
  height: 100%;
  background: transparent;
  overflow-x: auto;
  overflow-y: hidden;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  color: hsla(204,7%,15%);
}

.c1 th,
.c1 td {
  padding: 0.8rem 0.5rem;
  border-bottom: 0.1rem solid hsl(0,0%,74%);
}

.c1 th:not(:first-child),
.c1 td:not(:first-child) {
  text-align: center;
}

.c1 thead th {
  font-weight: 500;
  border-bottom: 0.2rem solid hsl(0,0%,74%);
}

.c1 tbody tr:nth-child(odd) {
  background-color: hsl(0,0%,93%);
}

@media (max-width:1170px) {
  .c0 {
    max-width: 80rem;
  }
}

@media (max-width:768px) {
  .c0 {
    max-width: 65rem;
    margin: auto;
  }
}

<div>
  <div
    class="c0"
  >
    <section>
      <table
        class="c1"
      >
        <thead>
          <tr>
            <th>
              Nome
            </th>
            <th>
              E-mail
            </th>
            <th>
              Telefone
            </th>
            <th>
              ID Lattes
            </th>
            <th>
              Cadastrado
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td />
            <td>
              my-email-is-test@test.com
            </td>
            <td />
            <td>
              <a
                class="c2"
                rel="noreferrer"
                target="_blank"
              >
                12345
              </a>
            </td>
            <td>
              <svg
                color="hsla(29, 73%, 56%)"
                fill="currentColor"
                height="3rem"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(61, 61, 61);"
                viewBox="0 0 1024 1024"
                width="3rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 688a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
                />
              </svg>
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </div>
</div>
`;
